# TwitterClone

./: CMakeLists.txt  README.md
config/: config-template.json
include/Controllers/: FollowsController.hpp  LikesController.hpp  LoginController.hpp  PostsController.hpp  StaticController.hpp  UsersController.hpp
include/Models/: Follows.hpp  Likes.hpp  Posts.hpp  Users.hpp
include/Utils/: JwtUtils.hpp
scripts/: generate_models.sh
sql/: create_tables.sql
src/: main.cpp
src/Controllers/: FollowsController.cpp  LikesController.cpp  LoginController.cpp  PostsController.cpp  StaticController.cpp  UsersController.cpp
src/Filters/: JwtFilter.cpp
src/Models/: Follows.cpp  Likes.cpp  Posts.cpp  Users.cpp
static/: swagger.json
static/css/: style.css
static/html/: index.html  login.html
static/js/: api.js  app.js
